Improved error handling for histogram calculations, fixed and improved tomcat logging